Updated README, fixed page titles, added screenshots

--- a/fetch_api/templates/sprint/story.html
+++ b/fetch_api/templates/sprint/story.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Project Management
+    Orai - Story: {{ story.name }}
 {% endblock %}
 
 {% block additional_css %}
